--- a/friends.html
+++ b/friends.html
@@ -106,7 +106,7 @@
       <i class="fas fa-comment fa"></i>
     </div>
 
-    <div id="no-mobile">Your screen is too big :(</div>
+    <div id="no-mobile">Your screen is super big :(</div>
 
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
